--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: go
 
+install:
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
+
 go:
   - tip
   - 1.6
@@ -9,4 +13,4 @@ os:
   - linux
   - osx
 
-script: make test
+script: make ci
